chore: updated release workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,4 +44,4 @@ jobs:
     - name: Build Bindings
       run: pdm run setup.py build_ext --inplace
     - name: Run Tests
-      run: pdm run test
+      run: pdm run pytest ./tests
