--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "tree-sitter-c-sharp>=0.21.2",
     "tree-sitter-embedded-template>=0.21.0",
     "tree-sitter-wgsl-bevy>=0.1.3",
+    "tree-sitter-yaml>=0.6.0",
 ]
 requires-python = ">=3.9.0"
 readme = "README.md"
