--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,11 +31,11 @@ jobs:
         retention-days: 2
 
   build-wheels:
-    name: Build wheel on ${{runner.os}}
-    runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Build wheel on ${{matrix.os}}
+    runs-on: ${{matrix.os}}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
         cache: pip
         python-version: '3.9'
     - name: Set up QEMU
-      if: runner.os == 'Linux'
+      if: matrix.os == 'Linux'
       uses: docker/setup-qemu-action@v3
       with:
         platforms: arm64
