--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: pdm-project/setup-pdm@v4
       with:
-        python-version: 3.12
+        python-version: 3.9
         cache: true
         cache-dependency-path: |
           ./pdm.lock
@@ -35,22 +35,22 @@ jobs:
     name: Build wheel on ${{matrix.os}}
     runs-on: ${{matrix.os}}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/checkout@v4
+    - uses: pdm-project/setup-pdm@v4
       with:
-        cache: pip
-        python-version: 3.12
+        python-version: 3.9
+        cache: true
+        cache-dependency-path: |
+          ./pdm.lock
+    - name: Install Dependencies
+      run: pdm install
     - name: Set up QEMU
       if: matrix.os == 'Linux'
       uses: docker/setup-qemu-action@v3
       with:
         platforms: arm64
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.16
-      with:
-        output-dir: dist
+      run: pdm run build_wheel
       env:
         CIBW_ARCHS_WINDOWS: AMD64
         CIBW_ARCHS_LINUX: x86_64 aarch64
