--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,47 +1,47 @@
-name: CI
-
-on:
-  pull_request:
-    branches:
-    - main
-  push:
-    branches:
-    - main
-
-jobs:
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: pdm-project/setup-pdm@v4
-      with:
-        python-version: 3.12
-        cache: true
-        cache-dependency-path: |
-          ./pdm.lock
-    - name: Install Dependencies
-      run: pdm install
-    - name: Load Cached Pre-Commit Dependencies
-      id: cached-pre-commit-dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pre-commit/
-        key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
-    - name: Execute Pre-Commit
-      run: pdm run pre-commit run --show-diff-on-failure --color=always --all-files
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: pdm-project/setup-pdm@v4
-      with:
-        python-version: 3.12
-        cache: true
-        cache-dependency-path: |
-          ./pdm.lock
-    - name: Install Dependencies
-      run: pdm install
-    - name: Build Bindings
-      run: pdm run setup.py build_ext --inplace
-    - name: Run Tests
-      run: pdm run test
+#name: CI
+#
+#on:
+#  pull_request:
+#    branches:
+#    - main
+#  push:
+#    branches:
+#    - main
+#
+#jobs:
+#  validate:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v4
+#    - uses: pdm-project/setup-pdm@v4
+#      with:
+#        python-version: 3.12
+#        cache: true
+#        cache-dependency-path: |
+#          ./pdm.lock
+#    - name: Install Dependencies
+#      run: pdm install
+#    - name: Load Cached Pre-Commit Dependencies
+#      id: cached-pre-commit-dependencies
+#      uses: actions/cache@v4
+#      with:
+#        path: ~/.cache/pre-commit/
+#        key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+#    - name: Execute Pre-Commit
+#      run: pdm run pre-commit run --show-diff-on-failure --color=always --all-files
+#  test:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v4
+#    - uses: pdm-project/setup-pdm@v4
+#      with:
+#        python-version: 3.12
+#        cache: true
+#        cache-dependency-path: |
+#          ./pdm.lock
+#    - name: Install Dependencies
+#      run: pdm install
+#    - name: Build Bindings
+#      run: pdm run setup.py build_ext --inplace
+#    - name: Run Tests
+#      run: pdm run test
