--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,14 +16,16 @@ jobs:
     - uses: actions/checkout@v4
     - uses: pdm-project/setup-pdm@v4
       with:
-        python-version: 3.9
+        python-version: 3.12
         cache: true
         cache-dependency-path: |
           ./pdm.lock
     - name: Install Dependencies
       run: pdm install
     - name: Build source dist
-      run: pdm run build_sdist
+      run: pdm build --no-wheel
+      env:
+        PROJECT_ROOT: ${{github.workspace}}
     - name: Upload sources
       uses: actions/upload-artifact@v4
       with:
@@ -34,33 +36,26 @@ jobs:
   build-wheels:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
     name: Build wheel on ${{matrix.os}}
     runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v4
     - uses: pdm-project/setup-pdm@v4
       with:
-        python-version: 3.9
+        python-version: 3.12
         cache: true
         cache-dependency-path: |
           ./pdm.lock
     - name: Export requirements
       run: pdm export --no-hashes > requirements.txt
-    - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==2.19.1
     - name: Set up QEMU
       if: matrix.os == 'Linux'
       uses: docker/setup-qemu-action@v3
       with:
-        platforms: arm64
+        platforms: all
     - name: Build wheels
-      run: python -m cibuildwheel --output-dir dist
-      env:
-        CIBW_ARCHS_WINDOWS: AMD64
-        CIBW_ARCHS_LINUX: x86_64 aarch64
-        CIBW_ARCHS_MACOS: x86_64 arm64
-        CIBW_TEST_SKIP: '*arm64 *aarch64'
+      uses: pypa/cibuildwheel@v2.19.1
     - name: Upload wheel artifacts
       uses: actions/upload-artifact@v4
       with:
