--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ dependencies = [
     "tree-sitter>=0.22.0",
     "tree-sitter-c-sharp>=0.21.2",
     "tree-sitter-embedded-template>=0.21.0",
-    "tree-sitter-wgsl-bevy>=0.1.3",
     "tree-sitter-yaml>=0.6.0",
 ]
 requires-python = ">=3.9.0"
@@ -30,10 +29,15 @@ license = {file = "LICENSE"}
 homepage = "https://github.com/Goldziher/tree-sitter-language-pack"
 
 [build-system]
-requires = ["setuptools>=70.1.1", "wheel>=0.43.0", "typing-extensions>=4.12.2"]
+requires = ["setuptools>=70.1.1", "wheel>=0.43.0", "typing-extensions>=4.12.2", "cython"]
+build-backend = "setuptools.build_meta"
 
 [tool.pdm]
-distribution = false
+distribution = true
+
+[tool.pdm.build]
+run-setuptools = true
+package-dir = ["test_sitter_language_pack"]
 
 [tool.pdm.dev-dependencies]
 dev = [
@@ -42,17 +46,12 @@ dev = [
     "pytest>=8.2.2",
     "setuptools>=70.1.1",
     "wheel>=0.43.0",
-    "inflection>=0.5.1",
     "pre-commit>=3.7.1",
-    "typing-extensions>=4.12.2",
-    "build>=1.2.1",
-    "cibuildwheel>=2.19.1",
+    "typing-extensions>=4.12.2"
 ]
 
 [tool.pdm.scripts]
 test = "pytest ./tests"
-build_sdist = "python -m build . --sdist --no-isolation"
-build_wheel = "cibuildwheel --output-dir dist"
 
 # linters configuration below
 [tool.ruff]
@@ -135,3 +134,7 @@ warn_return_any = true
 warn_unreachable = true
 warn_unused_configs = true
 warn_unused_ignores = true
+
+[tool.cibuildwheel]
+test-requires = "pytest"
+test-command = "pytest {project}/tests"
