--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,9 +21,9 @@ jobs:
         cache-dependency-path: |
           ./pdm.lock
     - name: Install Dependencies
-      run: pdm install
+      run: pdm install --no-default -q
     - name: Build source dist
-      run: pdm build --no-wheel
+      run: pdm build --no-wheel -v
       env:
         PROJECT_ROOT: ${{github.workspace}}
     - name: Upload sources
@@ -35,7 +35,7 @@ jobs:
   build-wheels:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, macos-13, macos-14, windows-latest]
         python_version: ['3.9', '3.10', '3.11', '3.12']
     name: Build wheel on ${{matrix.os}}
     runs-on: ${{matrix.os}}
@@ -48,7 +48,7 @@ jobs:
         cache-dependency-path: |
           ./pdm.lock
     - name: Build wheels
-      run: pdm build --no-sdist
+      run: pdm build --no-sdist -v
     - name: Upload wheel artifacts
       uses: actions/upload-artifact@v4
       with:
