--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-13, macos-14, windows-latest]
-        python_version: ['3.9', '3.10', '3.11', '3.12']
+        python_version: ['3.12']
     name: Build wheel on ${{matrix.os}}
     runs-on: ${{matrix.os}}
     steps:
@@ -47,8 +47,12 @@ jobs:
         cache: true
         cache-dependency-path: |
           ./pdm.lock
+    - name: Set path in environment
+      run: echo "PROJECT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
     - name: Build wheels
       run: pdm build --no-sdist -v
+      env:
+        PROJECT_ROOT: ${{env.PROJECT_ROOT}}
     - name: Upload wheel artifacts
       uses: actions/upload-artifact@v4
       with:
