--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,3 +138,4 @@ warn_unused_ignores = true
 [tool.cibuildwheel]
 test-requires = "pytest"
 test-command = "pytest {project}/tests"
+archs = ["auto"]
