--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      with:
+        node-version: '22'
     - name: Install tree-sitter cli
       run: npm install -g tree-sitter-cli
     - uses: pdm-project/setup-pdm@v4
@@ -47,6 +49,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      with:
+        node-version: '22'
     - name: Install tree-sitter cli
       run: npm install -g tree-sitter-cli
     - uses: pdm-project/setup-pdm@v4
