--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ keywords = ["tree-sitter"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "OSI Approved :: MIT License",
+    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
-    "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python",
+    "Typing :: Typed"
 ]
 
 dependencies = [
