chore: added clone vendors to ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,38 +9,7 @@ on:
     - main
 
 jobs:
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: pdm-project/setup-pdm@v4
-      with:
-        python-version: '3.9'
-        cache: true
-    - name: Install Dependencies
-      run: pdm install -v
-    - name: Load Cached Pre-Commit Dependencies
-      id: cached-pre-commit-dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pre-commit/
-        key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
-    - name: Lint
-      run: pdm run pre-commit run --show-diff-on-failure --color=always --all-files
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: pdm-project/setup-pdm@v4
-      with:
-        python-version: '3.9'
-        cache: true
-    - name: Install
-      run: pdm install
-    - name: Test
-      run: pdm run test
   clone_vendors:
-    needs: [validate, test]
     name: Clone vendors
     runs-on: ubuntu-latest
     steps:
@@ -62,8 +31,50 @@ jobs:
       with:
         name: language-parsers
         path: parsers
-  build-sdist:
+  validate:
     needs: clone_vendors
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download parsers
+      uses: actions/download-artifact@v4
+      with:
+        name: language-parsers
+        path: parsers
+    - uses: pdm-project/setup-pdm@v4
+      with:
+        python-version: '3.9'
+        cache: true
+    - name: Install Dependencies
+      run: pdm install -v
+    - name: Load Cached Pre-Commit Dependencies
+      id: cached-pre-commit-dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pre-commit/
+        key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+    - name: Lint
+      run: pdm run pre-commit run --show-diff-on-failure --color=always --all-files
+  test:
+    needs: clone_vendors
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download parsers
+      uses: actions/download-artifact@v4
+      with:
+        name: language-parsers
+        path: parsers
+    - uses: pdm-project/setup-pdm@v4
+      with:
+        python-version: '3.9'
+        cache: true
+    - name: Install
+      run: pdm install
+    - name: Test
+      run: pdm run test
+  build-sdist:
+    needs: [validate, test]
     name: Build source dist
     runs-on: ubuntu-latest
     continue-on-error: true
@@ -89,7 +100,7 @@ jobs:
       env:
         PROJECT_ROOT: ${{github.workspace}}
   build-wheels:
-    needs: clone_vendors
+    needs: [validate, test]
     strategy:
       matrix:
         os: [ubuntu-latest, macos-13, macos-14, windows-latest]
