--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,9 +13,9 @@ repos:
   - id: name-tests-test
     args:
     - --pytest
+    exclude: ^tests/factories|^tests/helpers|^tests/data_fixtures.py
   - id: trailing-whitespace
   - id: end-of-file-fixer
-    exclude: ^.pdm-python
   - id: check-yaml
   - id: check-toml
   - id: check-json
@@ -30,8 +30,13 @@ repos:
   hooks:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
+- repo: https://github.com/jsh9/pydoclint
+  rev: 0.5.6
+  hooks:
+  - id: pydoclint
+    args: [--style=google, --check-return-types=False, --arg-type-hints-in-docstring=False]
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.5.3
+  rev: v0.5.4
   hooks:
   - id: ruff
     args: [--fix]
@@ -43,4 +48,5 @@ repos:
     entry: pdm run mypy
     require_serial: true
     language: system
+    exclude: ^setup.py
     types: [python]
