feat: switch to using uv

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
+*$py.class
+*.Cache
+*.cscfg
 *.egg-info/
+*.log
+*.py[cod]
 *.so
+*.suo
+*.user
+.DS_store
+.coverage
+.dist/
+.env
 .idea/
-.pdm-python
-.venv/
-.vscode/
-__pycache__
+.mypy_cache
+.pytest_cache
+.python-version
+.ruff_cache
+.run
+.venv
+__pycache__/
 build/
+coverage.xml
 dist/
+parsers/
+requirements.txt
 vendor/
 wheelhouse/
-parsers/
